--- a/block-BHaacm/index.html
+++ b/block-BHaacm/index.html
@@ -19,7 +19,7 @@
     </header>
     <section>
     <article class=" article flex">
-        <article class="width-48">
+        <div class="width-48 order">
             <h2 class="article-heading">What is Lorem Ipsum?</h2>
             <p class="article-text"> Lorem ipsum dolor sit amet consectetur, 
                 adipisicing elit.  Doloremque vitae modi 
@@ -37,16 +37,16 @@
                 adipisicing elit. Doloremque vitae modi 
                 laboriosam ratione, enim tempora </p>
                 <div class="btn">Read More</div>
-        </article>
+        </div>
         <article>
             <img class="pencil-img" src="assets/01.png" alt="01">
         </article>
     </article>
     </section>
 <section>
-    <article>
+    <div>
         <h2 class="blog-heading">Our Blog</h2>
-    </article>
+    </div>
     <article class="flex-btw article-bg">
         <article>
             <img class="blog-img" src="assets/02.png" alt="02">
